# smart_ex

./: .gitignore  Cargo.toml  LICENSE  README.md  test_regression.sh
.github/workflows/: release.yml
crates/smartex-core/: Cargo.toml
crates/smartex-core/src/: archive_list.rs  compress.rs  context.rs  decompress.rs  i18n.rs  keychain.rs  lib.rs  progress.rs  rar.rs  stream_crypto.rs
crates/smartex-tauri/: Cargo.toml  tauri.conf.json
crates/smartex-tauri/capabilities/: default.json
crates/smartex-tauri/icons/: icon.icns
crates/smartex-tauri/src/: lib.rs  main.rs
installer/: Info.plist  build_deb.sh  build_macos_app.sh  build_pkg.sh  install.sh  smart_ex.desktop  smart_ex.iss  uninstall.ps1  uninstall.sh
src/: cli.rs  compress.rs  crypto.rs  decompress.rs  format.rs  gui.rs  i18n.rs  main.rs  progress.rs
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.svelte  app.css
ui/src/lib/: tauri.ts
ui/src/lib/components/: BackgroundLayer.svelte  Button.svelte  ContextWizard.svelte  IconButton.svelte  Input.svelte  Panel.svelte  ProgressBar.svelte  SettingsPanel.svelte  TitleBar.svelte  Toast.svelte  WorkflowEditor.svelte
ui/src/lib/stores/: app.svelte.ts  dragdrop.svelte.ts  progress.svelte.ts  settings.svelte.ts  workflows.svelte.ts
