[workspace]
members = ["crates/smartex-core", "crates/smartex-tauri", "."]
resolver = "2"

[workspace.package]
version = "0.6.0"
edition = "2021"
authors = ["smart_ex"]
license = "MIT"

[package]
name = "smart_ex"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "smart_ex"
path = "src/main.rs"

[dependencies]
smartex-core = { path = "crates/smartex-core" }
clap = { version = "4.5", features = ["derive"] }
rfd = "0.15"
indicatif = "0.17"
anyhow = "1.0"
which = "6.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
