[package]
name = "smartex-tauri"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "smartex_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
smartex-core = { path = "../smartex-core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
rfd = "0.15"
tokio = { version = "1", features = ["full"] }
log = "0.4"
